Added code for dynamic scatterplot and word cloud

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 width: 800px;
                 height: 340px;
             }
+
+            #word-cloud{
+                height: 300px;
+                width: 300px;
+                margin: 0 auto;
+            }
         </style>
     </head>
     <body>
@@ -74,6 +80,10 @@
             <div id="second">
                 <div id="chartContainer"></div>
                 Scatterplot goes here
+            </div>
+            <div id="first">
+                <div id="word-cloud"></div>
+                Word cloud goes here
             </div>
             <img src="test.jpg" style="margin:auto; width:100%;display:block" />
         </div>
